[package]
name = "esp-flashloader"
version = "0.1.0"
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
panic-never  = "0.1.0"
ufmt = { version = "0.1.0", optional = true }
esp32c3 = "0.3.0"

[features]
log = ["ufmt"]

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = "fat"
opt-level = 's'
overflow-checks = false