[package]
name = "esp-flashloader"
version = "0.1.0"
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
panic-never  = "0.1.0"
ufmt = { version = "0.1.0", optional = true }


[features]
log = ["ufmt"]

# targets
esp32c3 = []
esp32c6 = []
esp32h2 = []

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = "fat"
opt-level = 'z'
overflow-checks = false