[package]
name = "esp-flashloader"
version = "0.1.0"
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
panic-never = "0.1.0"
ufmt = "0.1.0"
cfg-if = "1.0"

[features]
# targets
esp32 = []
esp32s2 = []
esp32s3 = []
esp32c2 = []
esp32c3 = []
esp32c5 = []
esp32c6 = []
esp32c61 = []
esp32h2 = []
esp32p4 = []

[profile.release]
codegen-units = 1
debug = true
debug-assertions = false
incremental = false
lto = "fat"
opt-level = 'z'
overflow-checks = false
